# Deeploy-Hackathon

./: .gitignore  README.md  dev-requirements.txt  metadata.json  pyproject.toml
data/: download_dataset.py
model/: model.bst
notebooks/: train_diabetes_model.ipynb  util_functions.py
